Se retira referencia de clases para implementar camara

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,12 +33,10 @@ dist.jar=${dist.dir}/lwjgl.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.joml-1.10.4.jar=/usr/java/lwjgl/joml/joml-1.10.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.lwjgl.classpath}:\
-    ${file.reference.joml-1.10.4.jar}
+    ${libs.lwjgl.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
